--- a/app/src/main/res/layout/activity_code_editor.xml
+++ b/app/src/main/res/layout/activity_code_editor.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#ff000000">
+    android:layout_height="fill_parent" >
 
     <com.chichar.skdeditor.codeeditor.CodeEditor
         android:id="@+id/editor"
