--- a/app/src/main/res/layout/dialog_edittext.xml
+++ b/app/src/main/res/layout/dialog_edittext.xml
@@ -10,6 +10,7 @@
 		android:layout_marginTop="20dp"
 		android:layout_marginStart="30dp"
 		android:layout_marginEnd="30dp"
+		android:textColor="@color/white"
 		android:maxLines="1"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"/>
