--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,6 +44,16 @@
 		<item name="android:paddingEnd">0dp</item>
 		<item name="android:padding">0dp</item>
 		<item name="android:paddingStart">30dp</item>
+		<item name="buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
+		<item name="buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+	</style>
+
+	<style name="NegativeButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+		<item name="android:textColor">@color/purple_200</item>
+	</style>
+
+	<style name="PositiveButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+		<item name="android:textColor">@color/purple_200</item>
 	</style>
 
 	<style name="PopupMenuCustom" parent="Widget.AppCompat.PopupMenu">
