--- a/app/src/main/res/layout/item_backup_picker.xml
+++ b/app/src/main/res/layout/item_backup_picker.xml
@@ -1,44 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:orientation="horizontal"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 
 	<ImageView
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
 		android:id="@+id/fileImage"
 		android:layout_width="36dp"
 		android:layout_height="36dp"
-		android:src="@drawable/ic_round_file_24"
 		android:layout_margin="8dp"
+		android:src="@drawable/ic_round_file_24"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
 		app:tint="#BDBDBD" />
 
 	<TextView
-		app:layout_constraintStart_toEndOf="@id/fileImage"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
 		android:id="@+id/filename"
+		tools:text="backup"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="backup"
-		android:textColor="#eee"
-		android:textSize="18sp"
-		android:maxLines="1"
+		android:layout_gravity="center_vertical"
 		android:ellipsize="end"
 		android:maxEms="10"
-		android:layout_gravity="center_vertical"
-		android:padding="8dp"/>
+		android:maxLines="2"
+		android:padding="8dp"
+		android:textColor="#eee"
+		android:textSize="18sp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toEndOf="@id/fileImage"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<CheckBox
 		android:id="@+id/check"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:checked="true"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" />
 </androidx.constraintlayout.widget.ConstraintLayout>
