--- a/app/src/main/res/layout/backup_picker.xml
+++ b/app/src/main/res/layout/backup_picker.xml
@@ -4,8 +4,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	android:orientation="vertical">
 
 	<LinearLayout
 		android:id="@+id/buttons"
@@ -44,25 +43,13 @@
 		android:layout_height="wrap_content"
 		android:id="@+id/picker" />
 
-	<LinearLayout
-		android:visibility="gone"
+	<ProgressBar
 		android:id="@+id/loading"
-		android:elevation="99dp"
-		android:background="#4000"
-		android:orientation="horizontal"
-		android:gravity="center"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_width="0dp"
-		android:layout_height="0dp" >
-		<ProgressBar
-			android:gravity="center"
-			android:indeterminate="true"
-			android:indeterminateTintMode="src_atop"
-			android:indeterminateTint="@color/purple_200"
-			android:layout_width="70dp"
-			android:layout_height="70dp" />
-	</LinearLayout>
+		android:padding="15dp"
+		android:layout_gravity="center_horizontal"
+		android:indeterminate="true"
+		android:indeterminateTintMode="src_atop"
+		android:indeterminateTint="@color/purple_200"
+		android:layout_width="90dp"
+		android:layout_height="90dp" />
 </LinearLayout>
